--- a/index.html
+++ b/index.html
@@ -25,6 +25,27 @@
       align-items: center;
       gap: 10px;
     }
+    .delete-btn {
+      background: #ff4444;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 24px;
+      height: 24px;
+      cursor: pointer;
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      margin-left: auto;
+    }
+    .delete-btn:hover {
+      background: #cc0000;
+    }
+    .delete-btn:active {
+      background: #aa0000;
+    }
     .timestamp {
       color: #666;
       font-size: 0.9em;
