--- a/index.html
+++ b/index.html
@@ -25,6 +25,27 @@
       align-items: center;
       gap: 10px;
     }
+    .delete-btn {
+      background: #ff4444;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 24px;
+      height: 24px;
+      cursor: pointer;
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      margin-left: auto;
+    }
+    .delete-btn:hover {
+      background: #cc0000;
+    }
+    .delete-btn:active {
+      background: #aa0000;
+    }
     .timestamp {
       color: #666;
       font-size: 0.9em;
@@ -33,6 +54,21 @@
     audio {
       flex: 1;
     }
+    .recording-indicator {
+    width: 20px;
+    height: 20px;
+    border: 2px solid #ff4444;
+    border-radius: 50%;
+    border-top-color: transparent;
+    animation: spin 1s linear infinite;
+    margin-right: 10px;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
   </style>
 </head>
 <body>
