--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
   <h1>🎤 messen - G - er</h1>
-  <button id="record">Start Recording</button>
+  <button id="record">Start Recccccording</button>
   <button id="stop" disabled>Stop</button>
   <ul id="recordingsList"></ul>
   <script src="script.js"></script>
