--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       display: flex;
       align-items: center;
       gap: 10px;
+      position: relative;
     }
     .delete-btn {
       background: #ff4444;
@@ -46,6 +47,9 @@
       justify-content: center;
       padding: 0;
       margin-left: auto;
+      position: absolute;
+      top: 8px;
+      right: 8px;
     }
     .delete-btn:hover {
       background: #cc0000;
@@ -59,6 +63,8 @@
     }
     audio {
       flex: 1;
+      width: 100%;
+      max-width: 400px;
     }
     .recording-indicator {
       width: 20px;
@@ -73,6 +79,31 @@
       to {
         transform: rotate(360deg);
       }
+    }
+    .audio-container {
+      position: relative;
+      margin: 10px 0;
+    }
+    .loading-indicator {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 5px 10px;
+      border-radius: 4px;
+      font-size: 12px;
+    }
+    .error-message {
+      color: #ff4444;
+      font-size: 14px;
+      margin-top: 5px;
+    }
+    .audio-meta {
+      margin-top: 8px;
+      font-size: 12px;
+      color: #666;
     }
   </style>
 </head>
