--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Audio Recorder">
   <title>Voice Messenger</title>
   
   <!-- Firebase SDK -->
@@ -105,6 +109,15 @@
       font-size: 12px;
       color: #666;
     }
+  * {
+          -webkit-tap-highlight-color: transparent;
+          -webkit-touch-callout: none;
+      }
+
+      button {
+          -webkit-appearance: none;
+          -webkit-border-radius: 0;
+      }
   </style>
 </head>
 <body>
