--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     .recording-item {
       background: #f5f5f5;
       padding: 15px;
+      padding-right: 50px;
       margin-bottom: 10px;
       border-radius: 8px;
       display: flex;
@@ -38,22 +39,34 @@
       position: relative;
     }
     .delete-btn {
-      background: #ff4444;
-      color: white;
-      border: none;
-      border-radius: 50%;
-      width: 24px;
-      height: 24px;
-      cursor: pointer;
-      font-size: 14px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0;
-      margin-left: auto;
-      position: absolute;
-      top: 8px;
-      right: 8px;
+    position: absolute;
+    right: 15px;  /* Adjust this value to move the button further right */
+    top: 50%;
+    transform: translateY(-50%);
+    background: #ff4444;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 18px;
+    line-height: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    padding: 0;
+    }
+
+    .recording-item audio {
+    flex: 1;
+    min-width: 0;  /* Allows the audio element to shrink below its default width */
+    margin-right: 10px;
+  }
+
+    /* Make sure the audio controls don't overlap with the delete button */
+    audio::-webkit-media-controls-panel {
+    padding-right: 40px;
     }
     .delete-btn:hover {
       background: #cc0000;
@@ -136,7 +149,9 @@
       messagingSenderId: "905406830029",
       appId: "1:905406830029:web:7e565466436ffd6fffa084",
       databaseURL: "https://messen-g-er2-default-rtdb.europe-west1.firebasedatabase.app/"
-};
+    };
+    
+    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
 
     // Debug logs
@@ -146,9 +161,32 @@
 
     // Test database connection
     firebase.database().ref('.info/connected').on('value', (snapshot) => {
-    console.log('Database connected:', snapshot.val());
-  });
+      console.log('Database connected:', snapshot.val());
+    });
+
+    // Check authentication state
+    firebase.auth().onAuthStateChanged((user) => {
+      if (!user) {
+        // User is not signed in, redirect to login page
+        console.log('User not authenticated, redirecting to login...');
+        window.location.href = 'login.html';
+      } else {
+        console.log('User is authenticated:', user.email);
+        // User is signed in, you can perform any necessary actions here
+      }
+    });
   </script>
   <script src="script.js" defer></script>
+  <button id="logoutBtn" style="position: fixed; top: 10px; right: 10px;">Logout</button>
+  <script>
+    document.getElementById('logoutBtn').addEventListener('click', () => {
+      firebase.auth().signOut().then(() => {
+        console.log('User signed out');
+        window.location.href = 'login.html';
+      }).catch((error) => {
+        console.error('Sign out error:', error);
+      });
+    });
+  </script>
 </body>
 </html>
