--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
       }
 
       button {
+          appearance: none;
           -webkit-appearance: none;
+          border-radius: 0;
           -webkit-border-radius: 0;
       }
   </style>
