--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <title>Voice Messenger</title>
   
   <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-database-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-storage-compat.js"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-functions-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-storage-compat.js"></script>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -210,8 +212,12 @@
       databaseURL: "https://messen-g-er2-default-rtdb.europe-west1.firebasedatabase.app/"
     };
     
-    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
+
+    // Initialize Firebase
+    const auth = firebase.auth();
+    const database = firebase.database(); // Initialize Realtime Database
+    const functions = firebase.app().functions('europe-west1');
 
     // Debug logs
     console.log('Firebase initialized:', firebase.apps.length > 0);
@@ -219,25 +225,24 @@
     console.log('Database ref:', firebase.database().ref() !== undefined);
 
     // Test database connection
-    firebase.database().ref('.info/connected').on('value', (snapshot) => {
+    database.ref('.info/connected').on('value', (snapshot) => {
       console.log('Database connected:', snapshot.val());
-    });
+    }); 
 
     // Check authentication state
-    firebase.auth().onAuthStateChanged((user) => {
+    auth.onAuthStateChanged((user) => {
       if (!user) {
-        // User is not signed in, redirect to login page
         console.log('User not authenticated, redirecting to login...');
-        window.location.href = 'login.html';
+        window.location.href = 'login.html';  
       } else {
         console.log('User is authenticated:', user.email);
-        // User is signed in, you can perform any necessary actions here
       }
     });
-  </script>
-  <script type="module" src="openai-service.js"></script>
-  <script src="auth.js"></script>
-  <script src="script.js" type="module"></script>
+</script>
+<script src="firebase.js" type="module"></script>
+<script src="auth.js" type="module"></script>
+<script src="script.js" type="module"></script>
+<script src="openai-service.js" type="module"></script>
   <button id="logoutBtn" style="position: fixed; top: 10px; right: 10px;">Logout</button>
   <script>
     document.getElementById('logoutBtn').addEventListener('click', () => {
